--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
 
 
-            <div class="main-sections" style="background-color:rgb(245, 238, 239) ;" data-aos="fade-left" data-aos-duration="600" data-aos-delay="300">
+            <div class="main-sections" style="background-color:rgb(245, 238, 239) ;" data-aos="fade-up" data-aos-duration="600" data-aos-delay="300">
                 <div>
                     <h2 align="center" style="margin: 1rem;font-family: Arial, Helvetica, sans-serif;">
                         Shots For Yours Truly
@@ -72,7 +72,7 @@
             </div>
 
 
-            <div class="main-sections" data-aos="fade-up" data-aos-duration="400" data-aos-delay="300">
+            <div class="main-sections" >
                 <div>
                     <h2 align="center" style="margin: 1rem;font-family: Arial, Helvetica, sans-serif;">
                         My Vision
