--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div style="margin: 1rem;">
                 <h2 align="center" style="color:rgb(252, 162, 162);">Who am i?</h2>
             </div>
-            <div>
+            <div style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
                 <b>I am Ngozi Ogu,i hail from Imo state, Nigeria and proudly an aspiring global model under the age of 20.</b>
                 <p>I am a christain. Characterwise i am jovial, funny and very smart. I enjoy being in amongst people 
                     with goals and ambition but we'll be more close if you share my goals and aspiration. I love collaboration.
