--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 
             <div id="platforms">
                 <ul>
-                    <li><a href="">Facebook</a></li>
-                    <li><a href="">Instagram</a></li>
-                    <li><a href="">TikTok</a></li>
-                    <li><a href="">Snapchat</a></li>
+                    <li><a href="https://m.facebook.com/favour.ogu.92372?tsid=0.8012722218761421&source=result">Facebook</a></li>
+                    <li><a href="https://www.instagram.com/ngoz.ii/">Instagram</a></li>
+                    <li><a href="https://www.tiktok.com/@favourogu375?">TikTok</a></li>
+                    <li><a href="https://api.whatsapp.com/send?phone=0705880611">Whatsapp</a></li>
                 </ul>
             </div>
 
