added social media link

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <li><a href="https://m.facebook.com/favour.ogu.92372?tsid=0.8012722218761421&source=result">Facebook</a></li>
                     <li><a href="https://www.instagram.com/ngoz.ii/">Instagram</a></li>
                     <li><a href="https://www.tiktok.com/@favourogu375?">TikTok</a></li>
-                    <li><a href="https://api.whatsapp.com/send?phone=0705880611">Whatsapp</a></li>
+                    <li><a href="https://api.whatsapp.com/send?phone=+234705880611">Whatsapp</a></li>
                 </ul>
             </div>
 
